Add player mappings.